# ds3os

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DarkSouls2.Dockerfile  DarkSouls3.Dockerfile  Dockerfile  LICENSE  README.md  README_zhCN.md  ReadMe.txt  default.nix  flake.nix  vcpkg.json
Source/: CMakeLists.txt  DS3OpenServer.sln
Source/CMake/: Utils.cmake
Source/Injector/: CMakeLists.txt  Entry.cpp
Source/Injector/Config/: BuildConfig.h  RuntimeConfig.cpp  RuntimeConfig.h
Source/Injector/Hooks/: ChangeSaveGameFilenameHook.cpp  ChangeSaveGameFilenameHook.h  Hook.cpp  Hook.h  ReplaceServerAddressHook.cpp  ReplaceServerAddressHook.h  ReplaceServerPortHook.cpp  ReplaceServerPortHook.h
Source/Injector/Hooks/DarkSouls2/: DS2_LogProtobufsHook.cpp  DS2_LogProtobufsHook.h  DS2_ReplaceServerAddressHook.cpp  DS2_ReplaceServerAddressHook.h
Source/Injector/Hooks/DarkSouls3/: DS3_ReplaceServerAddressHook.cpp  DS3_ReplaceServerAddressHook.h
Source/Injector/Hooks/Shared/: ChangeSaveGameFilenameHook.cpp  ReplaceServerPortHook.cpp
Source/Injector/Injector/: Injector.cpp  Injector.h
Source/Loader/: App.config  CMakeLists.txt  Directory.Build.props  Loader.csproj  Program.cs  ProgramSettings.Designer.cs  ProgramSettings.settings
Source/Loader/Api/: MasterServerApi.cs  WebUiApi.cs
Source/Loader/Config/: BuildConfig.cs  InjectionConfig.cs  ServerConfig.cs
Source/Loader/Forms/: CreateServerDialog.Designer.cs  CreateServerDialog.cs  CreateServerDialog.resx  CreateServerDialog.zh.resx  MainForm.Designer.cs  MainForm.cs  MainForm.resx  MainForm.zh.resx  PasswordDialog.Designer.cs  PasswordDialog.cs  PasswordDialog.resx  PasswordDialog.zh.resx  ServerLoginDetailsDialog.Designer.cs  ServerLoginDetailsDialog.cs  ServerLoginDetailsDialog.resx  ServerLoginDetailsDialog.zh.resx  SettingsForm.Designer.cs  SettingsForm.cs  SettingsForm.resx  SettingsForm.zh.resx
Source/Loader/Properties/: Resources.Designer.cs  Resources.resx  launchSettings.json
Source/Loader/Properties/PublishProfiles/: FolderProfile.pubxml
Source/Loader/Utils/: EncryptionUtils.cs  ExeUtils.cs  NetUtils.cs  PatchingUtils.cs  SteamUtils.cs  WinAPI.cs
Source/MasterServer/: Dockerfile  Run.bat  package-lock.json  package.json
Source/MasterServer/src/: index.js
Source/MasterServer/src/config/: config.json
Source/Server/: CMakeLists.txt  Directory.Build.Cpp.props  Directory.Build.props  Entry.cpp  Resource.aps  Resource.rc  Server.vcxproj  Server.vcxproj.filters  resource.h  vcpkg.json
Source/Server.DarkSouls2/: CMakeLists.txt
Source/Server.DarkSouls2/Protobuf/: DS2_Protobufs.h
Source/Server.DarkSouls2/Protobuf/DarkSouls2/: DS2_Frpg2PlayerData.pb.cc  DS2_Frpg2RequestMessage.pb.cc
Source/Server.DarkSouls2/Server/: DS2_Game.cpp  DS2_Game.h
Source/Server.DarkSouls2/Server/GameService/: DS2_PlayerState.h
Source/Server.DarkSouls2/Server/Streams/: DS2_Frpg2ReliableUdpMessage.h  DS2_Frpg2ReliableUdpMessageTypes.inc
Source/Server.DarkSouls3/: CMakeLists.txt
Source/Server.DarkSouls3/Protobuf/: DS3_Protobufs.h
Source/Server.DarkSouls3/Protobuf/DarkSouls3/: DS3_FpdLogMessage.pb.h
Source/Server.DarkSouls3/Server/: DS3_Game.cpp  DS3_Game.h
Source/Server.DarkSouls3/Server/GameService/: DS3_PlayerState.h
Source/Server.DarkSouls3/Server/Streams/: DS3_Frpg2ReliableUdpMessage.h  DS3_Frpg2ReliableUdpMessageTypes.inc
Source/Server/Client/: Client.cpp  Client.h
Source/Server/Config/: BuildConfig.h  RuntimeConfig.cpp  RuntimeConfig.h
Source/Server/Core/Crypto/: CWCCipher.cpp  CWCCipher.h  CWCClientUDPCipher.cpp  CWCClientUDPCipher.h  CWCServerUDPCipher.cpp  CWCServerUDPCipher.h  CWCUDPCipher.cpp  CWCUDPCipher.h  Cipher.h  RSACipher.cpp  RSACipher.h  RSAKeyPair.cpp  RSAKeyPair.h
Source/Server/Core/Network/: NetConnection.h  NetConnectionTCP.cpp  NetConnectionTCP.h  NetConnectionUDP.cpp  NetConnectionUDP.h  NetHttpRequest.cpp  NetHttpRequest.h  NetIPAddress.cpp  NetIPAddress.h  NetUtils.cpp  NetUtils.h
Source/Server/Core/Utils/: Compression.cpp  Compression.h  DebugCounter.cpp  DebugCounter.h  DebugObjects.cpp  DebugObjects.h  DebugObjects.inc  DebugTimer.cpp  DebugTimer.h  DiffTracker.cpp  DiffTracker.h  Endian.h  Enum.h  EnumDef.inc  Event.h  File.cpp  File.h  Logging.cpp  Logging.h  Random.cpp  Random.h  Strings.cpp  Strings.h
Source/Server/Platform/: Platform.h
Source/Server/Platform/Linux/: LinuxPlatform.cpp
Source/Server/Platform/Win32/: Win32Platform.cpp
Source/Server/Protobuf/: FpdLogMessage.cc  FpdLogMessage.pb.cc  FpdLogMessage.pb.h  Frpg2PlayerData.cc  Frpg2PlayerData.pb.cc  Frpg2PlayerData.pb.h  Frpg2RequestMessage.cc  Frpg2RequestMessage.pb.cc  Frpg2RequestMessage.pb.h  Protobufs.h  SharedProtobufs.h
Source/Server/Protobuf/DarkSouls2/: DS2_FpdLogMessage.pb.cc  DS2_FpdLogMessage.pb.h  DS2_Frpg2PlayerData.pb.cc  DS2_Frpg2PlayerData.pb.h  DS2_Frpg2RequestMessage.pb.cc  DS2_Frpg2RequestMessage.pb.h
Source/Server/Protobuf/DarkSouls3/: DS3_Frpg2RequestMessage.pb.cc  DS3_Frpg2RequestMessage.pb.h
Source/Server/Protobuf/Shared/: Shared_FpdLogMessage.pb.cc  Shared_Frpg2PlayerData.pb.cc  Shared_Frpg2RequestMessage.pb.cc  Shared_Frpg2RequestMessage.pb.h
Source/Server/Server/: Game.cpp  Game.h  Server.cpp  Server.h  ServerManager.cpp  ServerManager.h  Service.h
Source/Server/Server/AuthService/: AuthClient.cpp  AuthClient.h  AuthService.cpp  AuthService.h
Source/Server/Server/Database/: DatabaseTypes.h  ServerDatabase.cpp  ServerDatabase.h
Source/Server/Server/GameService/: GameClient.cpp  GameClient.h  GameManager.h  GameService.cpp  GameService.h  PlayerState.h
Source/Server/Server/LoginService/: LoginClient.cpp  LoginClient.h  LoginService.cpp  LoginService.h
Source/Server/Server/Streams/: Frpg2Message.h  Frpg2MessageStream.cpp  Frpg2MessageStream.h  Frpg2Packet.h  Frpg2PacketStream.cpp  Frpg2PacketStream.h  Frpg2ReliableUdpFragment.h  Frpg2ReliableUdpFragmentStream.cpp  Frpg2ReliableUdpFragmentStream.h  README  (+13 more)
Source/Shared/: CMakeLists.txt
Source/Shared/Game/: GameType.cpp  GameType.h
Source/Shared/Platform/: Platform.h
Source/WebUI/Static/: index.html
(+324 files in other folders)
